# ogp_functions

./: README.md  latest_data_file_info.json  ogp_boundaries-metadata.json  ogp_tables-metadata.json  setup.cfg
ogp_functions/: ChangeHistory-schema-metadata.json  Changes-schema-metadata.json  Code_History_Database_May_2023_UK_ChangeHistory.csv-schema-metadata.json  Code_History_Database_May_2023_UK_Changes.csv-schema-metadata.json  Code_History_Database_May_2023_UK_Equivalents.csv-schema-metadata.json  Local_Authority_District_to_Region_(December_2022)_Lookup_in_England.csv-metadata.json  Local_Authority_District_to_Region_(December_2022)_Lookup_in_England.csv-schema-metadata.json  NSPL21_MAY_2023_UK.csv-schema-metadata.json  OA_to_LSOA_to_MSOA_to_LAD_(December_2021)_Lookup_in_England_and_Wales_v3.csv-metadata.json  OA_to_LSOA_to_MSOA_to_LAD_(December_2021)_Lookup_in_England_and_Wales_v3.csv-schema-metadata.json  __init__.py  ogp_functions.py  ogp_tables-metadata.json  tablegroup-metadata.json
tests/: test_ogp_functions.py
