[metadata]
name = ogp_functions
version = 0.0.0
author = Steven Firth
author_email = s.k.firth@lboro.ac.uk
description = Python functions for working with the Open Geography Portal data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/building-energy/ogp_functions
project_urls =
    Source = https://github.com/building-energy/ogp_functions/ogp_functions
    Bug Tracker = https://github.com/stevenkfirth/ogp_functions/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

